Cleanup README.md a bit

--- a/src/Documentation/landing.html
+++ b/src/Documentation/landing.html
@@ -168,9 +168,10 @@ function show_md( url ) {
     <h2>Download</h2>
 
     <p>
-    Birdland is packaged in several forms:
+    Birdland is available at GitHub and packaged as a tar file for download from here.
     </p>
     
+    <!--
     <ul>
 
     <li>As a tar file.
@@ -181,7 +182,6 @@ function show_md( url ) {
     For access via GitHub. Similar to above.
     </li>
 
-    <!--
     <li>
     For installation from <i>PyPi</i> via <i>pip</i>.
       This is also likely to be familiar to techy users and automatically installs all require
@@ -211,16 +211,17 @@ function show_md( url ) {
     </tr>
     </thead>
     <tbody>
-    <tr>
-        <td>Tar</td>
-        <td><a href=/Downloads/birdland-user.tar.gz>download</a><br></td>
-        <td><a href="javascript:void(0);" onclick="show_md( '/Downloads/ReadMe-Tar.md' )" >view</a></td>
-    </tr>
 
     <tr>
         <td>GitHub</td>
         <td><a href=https://github.com/wrwetzel/Birdland>At GitHub</a><br></td>
         <td><a href="javascript:void(0);" onclick="show_md( '/Downloads/ReadMe-GitHub.md' )" >view</a></td>
+    </tr>
+
+    <tr>
+        <td>Tar</td>
+        <td><a href=/Downloads/birdland-user.tar.gz>download</a><br></td>
+        <td><a href="javascript:void(0);" onclick="show_md( '/Downloads/ReadMe-Tar.md' )" >view</a></td>
     </tr>
 
     <!--
