Tweak ReadMe-Tar.md

--- a/src/Documentation/landing.html
+++ b/src/Documentation/landing.html
@@ -214,14 +214,14 @@ function show_md( url ) {
 
     <tr>
         <td>GitHub</td>
-        <td><a href=https://github.com/wrwetzel/Birdland>At GitHub</a><br></td>
-        <td><a href="javascript:void(0);" onclick="show_md( '/Downloads/ReadMe-GitHub.md' )" >view</a></td>
+        <td><a href=https://github.com/wrwetzel/Birdland>https://github.com/wrwetzel/Birdland</a><br></td>
+        <td><a href="javascript:void(0);" onclick="show_md( '/Downloads/ReadMe-GitHub.md' )" >ReadMe-GitHub</a></td>
     </tr>
 
     <tr>
         <td>Tar</td>
-        <td><a href=/Downloads/birdland-user.tar.gz>download</a><br></td>
-        <td><a href="javascript:void(0);" onclick="show_md( '/Downloads/ReadMe-Tar.md' )" >view</a></td>
+        <td><a href=/Downloads/birdland-user.tar.gz>https://birdland.wrwetzel.com/Downloads/birdland-user.tar.gz</a><br></td>
+        <td><a href="javascript:void(0);" onclick="show_md( '/Downloads/ReadMe-Tar.md' )" >ReadMe-Tar</a></td>
     </tr>
 
     <!--
